--- a/html/index.html
+++ b/html/index.html
@@ -5,30 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Queens</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
+<html>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./iconos/Captura de pantalla 2023-07-14 161632.png" alt="Logo de la marca">
+            <img src="../imagenes/iconos/Captura de pantalla 2023-07-30 152249.png" alt="Logo de la marca">
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="inicio.html">Inicio</a></li>
-                <li><a href="chefs.html">Chefs</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="./chefs.html">Chefs</a></li>
+                <li><a href="./menu.html">Menu</a></li>
+                <li><a href="./galeria.html">Galeria</a></li>
+                <li><a href="./delivery.html">Delivery</a></li>
             </ul>            
         </nav>
-        <a class="btn" href="menu.html"><button>Comprar</button></a>
+        <a class="btn" href="./menu.html"><button>Comprar</button></a>
     </header>
-    <main>
-       
-    </main>
+    <main class="main">
+        <article class="article"> 
+            <h1>WELCOME TO COFFEE QUEENS</h1>
+            <div class="btn">
+                <a class="btn" href="./menu.html"><button>Elige tu cake</button></a>
+            </div>
+        </article>
+    </main>   
     <footer class="footer">
         <div class="titulo-footer">
             <h1>Coffee Queens</h1>
@@ -58,5 +65,4 @@
             <small>Bakery & Cafe</small>
         </section>
     </footer>
-
-    
+</body>
