--- a/html/menu.html
+++ b/html/menu.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Queens</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
+</html>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./iconos/Captura de pantalla 2023-07-14 161632.png" alt="Logo de la marca">
+            <img src="../imagenes/iconos/Captura de pantalla 2023-07-30 152249.png" alt="Logo de la marca">
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="inicio.html">Inicio</a></li>
-                <li><a href="chefs.html">Chefs</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./chefs.html">Chefs</a></li>
+                <li><a href="./menu.html">Menu</a></li>
+                <li><a href="./galeria.html">Galeria</a></li>
+                <li><a href="./delivery.html">Delivery</a></li>
             </ul>            
         </nav>
         <a class="btn" href="menu.html"><button>Comprar</button></a>
@@ -32,55 +34,55 @@
         </div>
         <div class="container-menu">
             <div class="menu">
-                    <img src="./menu/capuccino.png">
+                    <img src="../imagenes/menu/capuccino.png">
                     <h4>CAPUCCINO</h4>
                     <p>2$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
             </div>
             <div class="menu">
-                    <img src="./menu/mocaccino.png">
+                    <img src="../imagenes/menu/mocaccino.png">
                     <h4>MOCACCINO</h4>
                     <p>2.4$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
             </div>
             <div class="menu">
-                    <img src="./menu/churros con chocolate.png">
-                    <h4>CHURROS DE CHOCOLATE</h4>
+                    <img src="../imagenes/menu/churros con chocolate.png">
+                    <h4>CHURROS CON CHOCOLATE</h4>
                     <p>3.9$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
             </div>
             <div class="menu">
-                    <img src="./menu/croissant de chocolate.png">
+                    <img src="../imagenes/menu/croissant de chocolate.png">
                     <h4>CROISSANT CON CHOCOLATE</h4>
                     <p>3$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
             </div>
             <div class="menu">
-                    <img src="./menu/tarta de chocolate.png">
+                    <img src="../imagenes/menu/tarta de chocolate.png">
                     <h4>TARTA DE CHOCOLATE</h4>
                     <p>4.5$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
             </div>
             <div class="menu">
-                    <img src="./menu/tarta tres leches.png">
+                    <img src="../imagenes/menu/tarta tres leches.png">
                     <h4>TARTA DE TRES LECHE</h4>
                     <p>5$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
             </div>
             <div class="menu">
-                    <img src="./menu/brownie.png">
+                    <img src="../imagenes/menu/brownie.png">
                     <h4>BROWNIE</h4>
                     <p>3$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
             </div>
             <div class="menu">
-                    <img src="./menu/tarta limon.png">
+                    <img src="../imagenes/menu/tarta limon.png">
                     <h4>TARTA DE LIMON</h4>
                     <p>5.3$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
                     </div>
             <div class="menu">
-                    <img src="./menu/flan.png">
+                    <img src="../imagenes/menu/flan.png">
                     <h4>FLAN</h4>
                     <p>3$</p>
                     <a class="btn" href="#"><button>Comprar</button></a>
@@ -116,5 +118,6 @@
             <small>Bakery & Cafe</small>
         </section>
     </footer>
-
+    
+</body>
     
