agregando sass a mi proyecto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Queens</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style-orinalcss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -20,10 +20,10 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="./chefs.html">Chefs</a></li>
-                <li><a href="./menu.html">Menu</a></li>
-                <li><a href="./galeria.html">Galeria</a></li>
-                <li><a href="./delivery.html">Delivery</a></li>
+                <li><a href="./html/chefs.html">Chefs</a></li>
+                <li><a href="./html/menu.html">Menu</a></li>
+                <li><a href="./html/galeria.html">Galeria</a></li>
+                <li><a href="./html/delivery.html">Delivery</a></li>
             </ul>            
         </nav>
         <a class="btn" href="./menu.html"><button>Comprar</button></a>
