--- a/html/delivery.html
+++ b/html/delivery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Queens</title>
-    <link rel="stylesheet" href="../css/style-original.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./chefs.html">Chefs</a></li>
                 <li><a href="./menu.html">Menu</a></li>
                 <li><a href="./galeria.html">Galeria</a></li>
@@ -44,21 +44,13 @@
                     _ En Coffee Queens, el buen servicio es nuestra razón de ser. Nuestro equipo está altamente capacitado para brindarte una atención amable y cordial en cada paso del proceso de entrega. Tu satisfacción es nuestra mayor recompensa, y trabajamos arduamente para superar tus expectativas en cada pedido que realizas con nosotros. <br> <br>
                         
                     _ Descubre la magia de Coffee Queens y déjanos deleitarte con la combinación perfecta de deliciosos pasteles y café excepcional, entregados con rapidez y un servicio excepcional. ¡Estamos aquí para hacer de tus momentos especiales momentos inolvidables.  </p>
+
+                    <div>
+                        <h3>LLama: <a href="#">+56981230941</a></h3>
+                    </div>
                 </div>
-                <div class="img-delivery">
-                    <img src="../imagenes/delivery/bicicleta.jpeg" alt="bicicleta-delivery">
-                </div>
-                <div class="img-delivery">
-                    <img src="../imagenes/delivery/pexels-photo-12725408.jpeg" alt="bicicleta-delivery">
-                </div>
-                <div class="img-delivery ">
-                    <img src="../imagenes/delivery/pexels-photo-8988480.jpeg" alt="bicicleta-delivery">
-                </div>
-                <div class="img-delivery">
-                    <img src="../imagenes/delivery/pexels-photo-8988510.jpeg" alt="bicicleta-delivery">
-                </div>
-            </div>
         </div>
+
     </main>
     <footer class="footer">
         <div class="titulo-footer">
@@ -86,7 +78,6 @@
                 <li><a href="#">Instagran</a></li>
                 <li><a href="#">Facebook</a></li>
             </ul>
-            <small>Bakery & Cafe</small>
         </section>
     </footer>
 
