--- a/html/galeria.html
+++ b/html/galeria.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Queens</title>
-    <link rel="stylesheet" href="../css/style-original.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./chefs.html">Chefs</a></li>
                 <li><a href="./menu.html">Menu</a></li>
                 <li><a href="./galeria.html">Galeria</a></li>
@@ -97,7 +97,6 @@
                 <li><a href="#">Instagran</a></li>
                 <li><a href="#">Facebook</a></li>
             </ul>
-            <small>Bakery & Cafe</small>
         </section>
     </footer>
 </body>
