--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Queens</title>
-    <link rel="stylesheet" href="../css/style-orinalcss">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../imagenes/iconos/Captura de pantalla 2023-07-30 152249.png" alt="Logo de la marca">
+            <img src="./imagenes/iconos/Captura de pantalla 2023-07-30 152249.png" alt="Logo de la marca">
         </div>
         <nav>
             <ul class="nav-links">
@@ -62,7 +62,6 @@
                 <li><a href="#">Instagran</a></li>
                 <li><a href="#">Facebook</a></li>
             </ul>
-            <small>Bakery & Cafe</small>
         </section>
     </footer>
 </body>
