--- a/html/galeria.html
+++ b/html/galeria.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee Queens</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Coffee Queens - Café y Pasteles Premium</title>
+        <meta name="description" content="Disfruta del mejor café y pasteles en Coffee Queens. Explora nuestro menú, conoce a nuestros chefs y disfruta de nuestra encantadora galería.">
+        <meta name="keywords" content="café, pasteles, menú, chefs, galería, delivery, Coffee Queens">
+        <link rel="canonical" href="https://www.tusitio.com">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <!-- Etiquetas Open Graph para Facebook -->
+        <meta property="og:title" content="Coffee Queens - Café y Pasteles Premium">
+        <meta property="og:description" content="Disfruta del mejor café y pasteles en Coffee Queens. Explora nuestro menú, conoce a nuestros chefs y disfruta de nuestra encantadora galería.">
+        <meta property="og:image" content="https://www.tusitio.com/imagenes/og-imagen.jpg">
+        <meta property="og:url" content="https://www.tusitio.com">
+        <meta property="og:type" content="website">
+        <!-- Etiquetas Twitter Card para Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Coffee Queens - Café y Pasteles Premium">
+        <meta name="twitter:description" content="Disfruta del mejor café y pasteles en Coffee Queens. Explora nuestro menú, conoce a nuestros chefs y disfruta de nuestra encantadora galería.">
+        <meta name="twitter:image" content="https://www.tusitio.com/imagenes/twitter-card-imagen.jpg">
 </head>
 </html>
 <body>   
