--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <article class="article"> 
             <h1>WELCOME TO COFFEE QUEENS</h1>
             <div class="btn">
-                <a class="btn" href="./menu.html"><button>Elige tu cake</button></a>
+                <a class="btn" href="../html/html/menu.html"><button>Elige tu cake</button></a>
             </div>
         </article>
     </main>   
